# slovo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.uk.md
.github/workflows/: ci.yml  release.yml
scripts/: package-dmg.sh  set-dmg-icon.sh  test_slovo.sh
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  config.rs  hotkey.rs  lib.rs  main.rs  translate.rs
